# BA_repo

./: .env.example  .gitignore  0_get_data.ipynb  1_clean_data.ipynb  2_feature_engineer.ipynb  3_eda_data.ipynb  4_feature_investigation.ipynb  CLAUDE.md  Dockerfile.api  README.md  RESAMPLING_GUIDE.md  docker-compose.yml  get_data.py  pyproject.toml  render.yaml  requirements.txt  test_resampling_internal.py
.streamlit/: config.toml
app/: api.py  config.py  dashboard.py  data.py  db.py  evaluation.py  features.py  imbalance.py  learning_curve.py  mlflow_utils.py  monitor.py  monitoring.py  train.py  tuning.py  wandb_utils.py
app/models/: lightgbm_model.py  lr.py  rf.py  xgboost_model.py
data/: realtime_stream_test_sample.csv
docs/: 2b_feature_selection.md  2b_feature_selection_and_retuning.md  3_model_training_evaluation.md  4_monitoring.md  5_huong_dan_train.md  6_wandb_training.md
docs/superpowers/plans/: 2026-07-05-feature-selection-and-retuning.md  2026-07-05-model-training-evaluation.md  2026-07-07-cost-based-metric.md  2026-07-07-drift-monitoring.md
docs/superpowers/specs/: 2026-07-07-cost-based-metric-design.md  2026-07-07-drift-monitoring-design.md
model/lightgbm/: meta.yaml
model/lightgbm/9cbf1ef4ff9748c88a5afb34064d3c3e/: meta.yaml
model/random-forest/: meta.yaml
model/xgboost/: meta.yaml
tests/: test_data.py  test_evaluation.py  test_imbalance.py  test_models.py  test_monitoring.py  test_tuning.py  test_wandb_utils.py
webapp/: Dockerfile  app.py
webapp/.streamlit/: config.toml
(+89 files in other folders)
