[project]
name = "fraud-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.1.0,<3.0.0",
    "numpy==2.5.0",
    "pyarrow>=4.0.0,<24",
    "ipykernel",
    "scikit-learn>=1.9.0",
    "xgboost>=3.3.0",
    "lightgbm>=4.6.0",
    "mlflow>=3.9.0",
    "imbalanced-learn>=0.14.2",
]

[dependency-groups]
dev = [
    "nbconvert>=7.17.1",
    "pytest>=9.1.1",
]
